--- a/src/java/org/pillarone/riskanalytics/domain/pc/cf/output/CollectingModeStrategyResources.properties
+++ b/src/java/org/pillarone/riskanalytics/domain/pc/cf/output/CollectingModeStrategyResources.properties
@@ -43,3 +43,24 @@ ICollectingModeStrategy.AGGREGATE_BY_PERIOD_ultimate_paidIncrementalIndexed=Agg,
 ICollectingModeStrategy.AGGREGATE_ultimate_paidIncrementalIndexed=Agg,Split:_,_,Filter:ult,paid_inc
 ICollectingModeStrategy.AGGREGATE_BY_TYPE=Agg,Split:_,_,t,Filter:none
 ICollectingModeStrategy.AGGREGATE_BY_SOURCE_ultimate_paidIncrementalIndexed=Agg,Split:_,s,Filter:ult,paid_inc
+
+//BEGIN AR-111 BLOCK
+
+ICollectingModeStrategy.AGGREGATE_BY_SOURCE_BY_PAST_VS_FUTURE_reportedIncrementalIndexed_paidIncrementalIndexed=Aggregate (Split by Source, Period/Reported, Paid)
+ICollectingModeStrategy.AGGREGATE_BY_PAST_VS_FUTURE=Agg,Split:u,_,_,Filter:all
+ICollectingModeStrategy.AGGREGATE_BY_SOURCE_BY_PAST_VS_FUTURE=Agg,Split:u,_,s,Filter:all
+ICollectingModeStrategy.AGGREGATE_BY_SOURCE_BY_PAST_VS_FUTURE_paidIncrementalIndexed_reservesIndexed_IBNRIndexed_outstandingIndexed_reportedIncrementalIndexed_ultimate_totalIncrementalIndexed_totalCumulativeIndexed_premiumRiskBase_reserveRiskBase_premiumAndReserveRiskBase=Agg,Split:u,_,s,Filter:paid_inc,RepRes_cum,IBNR_cum,TotRes_cum,rep_inc,total,rb_claim
+ICollectingModeStrategy.AGGREGATE_BY_SOURCE_BY_PAST_VS_FUTURE_paidIncrementalIndexed_reservesIndexed_IBNRIndexed_outstandingIndexed_reportedIncrementalIndexed_ultimate_totalIncrementalIndexed_totalCumulativeIndexed=Agg,Split:u,_,s,Filter:paid_inc,RepRes_cum,IBNR_cum,TotRes_cum,rep_inc,total
+ICollectingModeStrategy.AGGREGATE_BY_SOURCE_BY_PAST_VS_FUTURE_outstandingIndexed_totalIncrementalIndexed=Agg,Split:u,_,s,Filter:TotRes_cum,total_inc
+ICollectingModeStrategy.AGGREGATE_BY_PAST_VS_FUTURE_outstandingIndexed_totalIncrementalIndexed=Agg,Split:u,_,_,Filter:TotRes_cum,total_inc
+ICollectingModeStrategy.AGGREGATE_BY_SOURCE_BY_PAST_VS_FUTURE_outstandingIndexed_totalIncrementalIndexed_premiumRiskBase_reserveRiskBase_premiumAndReserveRiskBase=Agg,Split:u,_,s,Filter:TotRes_cum,total_inc,rb_claim
+ICollectingModeStrategy.AGGREGATE_BY_PAST_VS_FUTURE_outstandingIndexed_totalIncrementalIndexed_premiumRiskBase_reserveRiskBase_premiumAndReserveRiskBase=Agg,Split:u,_,_,Filter:TotRes_cum,total_inc,rb_claim
+ICollectingModeStrategy.AGGREGATE_FIN_BY_PAST_VS_FUTURE=Agg,Split:u,_,_,Filter:all
+ICollectingModeStrategy.AGGREGATE_GN_BY_PAST_VS_FUTURE_grossReserveRisk_grossPremiumRisk_grossPremiumReserveRisk_netReserveRisk_netPremiumRisk_netPremiumReserveRisk=Agg,GN,Split:u,_,_,Filter:RiskBase
+ICollectingModeStrategy.AGGREGATE_GNC_BY_PAST_VS_FUTURE_grossReserveRisk_grossPremiumRisk_grossPremiumReserveRisk_netReserveRisk_netPremiumRisk_netPremiumReserveRisk_cededReserveRisk_cededPremiumRisk_cededPremiumReserveRisk=Agg,GNC,Split:u,_,_,Filter:RiskBase
+ICollectingModeStrategy.AGGREGATE_GN_BY_PAST_VS_FUTURE_grossReserveRisk_grossPremiumRisk_grossPremiumReserveRisk_netReserveRisk_netPremiumRisk_netPremiumReserveRisk_grossPremiumWritten_netPremiumWritten=Agg,GN,Split:u,_,_,Filter:RiskBase,prem_wri
+ICollectingModeStrategy.AGGREGATE_GNC_BY_PAST_VS_FUTURE_grossReserveRisk_grossPremiumRisk_grossPremiumReserveRisk_netReserveRisk_netPremiumRisk_netPremiumReserveRisk_cededReserveRisk_cededPremiumRisk_cededPremiumReserveRisk_grossPremiumWritten_netPremiumWritten_cededPremiumWritten=Agg,GNC,Split:u,_,_,Filter:RiskBase,prim_wri
+ICollectingModeStrategy.AGGREGATE_FIN_BY_PAST_VS_FUTURE_grossPremiumRisk_grossReserveRisk_grossPremiumReserveRisk=Agg,Split:u,_,_,Filter:rb_fin_premium,rb_fin_reserves,rb_fin_total
+ICollectingModeStrategy.AGGREGATE_BY_PAST_VS_FUTURE_ultimate_paidIncrementalIndexed=Agg,Split:u,_,_,Filter:ult,paid_inc
+
+//END AR-111 BLOCK
