Add hopefully useful comment

--- a/src/java/org/pillarone/riskanalytics/domain/pc/cf/output/CollectingModeStrategyResources.properties
+++ b/src/java/org/pillarone/riskanalytics/domain/pc/cf/output/CollectingModeStrategyResources.properties
@@ -1,3 +1,14 @@
+# NB Currently need to manually sync entries here with those in *PcCashflowGrailsPlugin.groovy...
+# Eg the line :
+#       ICollectingModeStrategy.AGGREGATE_BY_PAST_VS_FUTURE=Agg,Split:u,_,_,Filter:all
+#
+# syncs with the line(s) like
+#
+#        CollectingModeFactory.registerStrategy(new SplitAndFilterCollectionModeStrategy([DrillDownMode.BY_PAST_VS_FUTURE],[] ,[SingleValuePacket])) // prototype
+#
+# Note that the packet class (here: SingleValuePacket) is not reflected in the 'field' name (here: AGGREGATE_BY_PAST_VS_FUTURE)
+# (Which means eg if you delete the new collection mode strategy prototype you may not necessarily be able to remove the prototype..)
+#
 ICollectingModeStrategy.SPLIT_PER_SOURCE=Split per Source
 ICollectingModeStrategy.SPLIT_PER_SOURCE_REDUCED=Split per Source (Ultimate, Reported)
 ICollectingModeStrategy.SPLIT_BY_INCEPTION_DATE=Split by Inception Period
