Preliminary commit of WIP Artisan 1 model support - more specifically most of the changes regard adding support of split collectors for ClaimDevelopmentPacket.

--- a/src/java/org/pillarone/riskanalytics/domain/pc/cf/output/CollectingModeStrategyResources.properties
+++ b/src/java/org/pillarone/riskanalytics/domain/pc/cf/output/CollectingModeStrategyResources.properties
@@ -48,6 +48,9 @@ ICollectingModeStrategy.AGGREGATE_BY_SOURCE_ultimate_paidIncrementalIndexed=Agg,
 
 ICollectingModeStrategy.AGGREGATE_BY_SOURCE_BY_PAST_VS_FUTURE_reportedIncrementalIndexed_paidIncrementalIndexed=Aggregate (Split by Source, Period/Reported, Paid)
 ICollectingModeStrategy.AGGREGATE_BY_PAST_VS_FUTURE=Agg,Split:u,_,_,Filter:all
+ICollectingModeStrategy.AGGREGATE_BY_PAST_VS_FUTURE_paid=Agg,Split:u,_,_,Filter:paid
+ICollectingModeStrategy.AGGREGATE_BY_PAST_VS_FUTURE_paid_changeInReserves=Agg,Split:u,_,_,Filter:paid,changeInReserves
+ICollectingModeStrategy.AGGREGATE_BY_PAST_VS_FUTURE_changeInReserves=Agg,Split:u,_,_,Filter:changeInReserves
 ICollectingModeStrategy.AGGREGATE_BY_SOURCE_BY_PAST_VS_FUTURE=Agg,Split:u,_,s,Filter:all
 ICollectingModeStrategy.AGGREGATE_BY_SOURCE_BY_PAST_VS_FUTURE_paidIncrementalIndexed_reservesIndexed_IBNRIndexed_outstandingIndexed_reportedIncrementalIndexed_ultimate_totalIncrementalIndexed_totalCumulativeIndexed_premiumRiskBase_reserveRiskBase_premiumAndReserveRiskBase=Agg,Split:u,_,s,Filter:paid_inc,RepRes_cum,IBNR_cum,TotRes_cum,rep_inc,total,rb_claim
 ICollectingModeStrategy.AGGREGATE_BY_SOURCE_BY_PAST_VS_FUTURE_paidIncrementalIndexed_reservesIndexed_IBNRIndexed_outstandingIndexed_reportedIncrementalIndexed_ultimate_totalIncrementalIndexed_totalCumulativeIndexed=Agg,Split:u,_,s,Filter:paid_inc,RepRes_cum,IBNR_cum,TotRes_cum,rep_inc,total
