[AR-111] New collection strategy that includes paid field for CDP

--- a/src/java/org/pillarone/riskanalytics/domain/pc/cf/output/CollectingModeStrategyResources.properties
+++ b/src/java/org/pillarone/riskanalytics/domain/pc/cf/output/CollectingModeStrategyResources.properties
@@ -77,5 +77,6 @@ ICollectingModeStrategy.AGGREGATE_GNC_BY_UPDATEDATE_grossReserveRisk_grossPremiu
 ICollectingModeStrategy.AGGREGATE_FIN_BY_UPDATEDATE_grossPremiumRisk_grossReserveRisk_grossPremiumReserveRisk=Agg,Split:u,_,_,Filter:rb_fin_premium,rb_fin_reserves,rb_fin_total
 ICollectingModeStrategy.AGGREGATE_BY_UPDATEDATE_ultimate_paidIncrementalIndexed=Agg,Split:u,_,_,Filter:ult,paid_inc
 ICollectingModeStrategy.AGGREGATE_BY_UPDATEDATE_incurred_changeInReserves=Agg,Split:u,_,_,Filter:ult,changeInReserves
+ICollectingModeStrategy.AGGREGATE_BY_UPDATEDATE_incurred_paid_changeInReserves=Agg,Split:u,_,_,Filter:ult,paid,changeInReserves
 
 //END AR-111 BLOCK
