Added Single Split Collector stub. Needs being cleaned up more than extended!

--- a/src/java/org/pillarone/riskanalytics/domain/pc/cf/output/CollectingModeStrategyResources.properties
+++ b/src/java/org/pillarone/riskanalytics/domain/pc/cf/output/CollectingModeStrategyResources.properties
@@ -79,4 +79,7 @@ ICollectingModeStrategy.AGGREGATE_BY_UPDATEDATE_ultimate_paidIncrementalIndexed=
 ICollectingModeStrategy.AGGREGATE_BY_UPDATEDATE_incurred_changeInReserves=Agg,Split:u,_,_,Filter:ult,changeInReserves
 ICollectingModeStrategy.AGGREGATE_BY_UPDATEDATE_incurred_paid_changeInReserves=Agg,Split:u,_,_,Filter:ult,paid,changeInReserves
 
+ICollectingModeStrategy.SINGLE_BY_UPDATEDATE_paidIncrementalIndexed=Single,Split:u,_,_,Filter:paid_inc
+ICollectingModeStrategy.SINGLE_NO-SPLIT_NO-FILTER=Single,Split:_,_,_,Filter:All
+
 //END AR-111 BLOCK
