[AR-111] Added 'Monthly' Split strategy (only A2 model so far)

--- a/src/java/org/pillarone/riskanalytics/domain/pc/cf/output/CollectingModeStrategyResources.properties
+++ b/src/java/org/pillarone/riskanalytics/domain/pc/cf/output/CollectingModeStrategyResources.properties
@@ -81,5 +81,8 @@ ICollectingModeStrategy.AGGREGATE_BY_UPDATEDATE_incurred_paid_changeInReserves=A
 
 ICollectingModeStrategy.SINGLE_BY_UPDATEDATE_paidIncrementalIndexed=Single,Split:u,_,_,Filter:paid_inc
 ICollectingModeStrategy.SINGLE_NO-SPLIT_NO-FILTER=Single,Split:_,_,_,Filter:All
+ICollectingModeStrategy.MONTHLY_BY_UPDATEDATE_paidIncrementalIndexed=Monthly,Split:u,_,_,Filter:paid_inc
+ICollectingModeStrategy.MONTHLY_NO-SPLIT_NO-FILTER=MonthLy,Split:_,_,_,Filter:All
+
 
 //END AR-111 BLOCK
