[AR-111] Making monthly split collector available for CDP.paid in Art1 - resource.properties

--- a/src/java/org/pillarone/riskanalytics/domain/pc/cf/output/CollectingModeStrategyResources.properties
+++ b/src/java/org/pillarone/riskanalytics/domain/pc/cf/output/CollectingModeStrategyResources.properties
@@ -80,8 +80,10 @@ ICollectingModeStrategy.AGGREGATE_BY_UPDATEDATE_incurred_changeInReserves=Agg,Sp
 ICollectingModeStrategy.AGGREGATE_BY_UPDATEDATE_incurred_paid_changeInReserves=Agg,Split:u,_,_,Filter:ult,paid,changeInReserves
 
 ICollectingModeStrategy.SINGLE_BY_UPDATEDATE_paidIncrementalIndexed=Single,Split:u,_,_,Filter:paid_inc
+ICollectingModeStrategy.SINGLE_BY_UPDATEDATE_paid=Single,Split:u,_,_,Filter:paid
 ICollectingModeStrategy.SINGLE_NO-SPLIT_NO-FILTER=Single,Split:_,_,_,Filter:All
 ICollectingModeStrategy.MONTHLY_BY_UPDATEDATE_paidIncrementalIndexed=Monthly,Split:u,_,_,Filter:paid_inc
+ICollectingModeStrategy.MONTHLY_BY_UPDATEDATE_paid=Monthly,Split:u,_,_,Filter:paid
 ICollectingModeStrategy.MONTHLY_NO-SPLIT_NO-FILTER=MonthLy,Split:_,_,_,Filter:All
 
 
