[AR-111] Added BY_CALENDARYEAR Drilldown mode

--- a/src/java/org/pillarone/riskanalytics/domain/pc/cf/output/CollectingModeStrategyResources.properties
+++ b/src/java/org/pillarone/riskanalytics/domain/pc/cf/output/CollectingModeStrategyResources.properties
@@ -84,6 +84,8 @@ ICollectingModeStrategy.SINGLE_BY_UPDATEDATE_paid=Single,Split:u,_,_,Filter:paid
 ICollectingModeStrategy.SINGLE_NO-SPLIT_NO-FILTER=Single,Split:_,_,_,Filter:All
 ICollectingModeStrategy.MONTHLY_BY_UPDATEDATE_paidIncrementalIndexed=Monthly,Split:u,_,_,Filter:paid_inc
 ICollectingModeStrategy.MONTHLY_BY_UPDATEDATE_paid=Monthly,Split:u,_,_,Filter:paid
+ICollectingModeStrategy.MONTHLY_BY_CALENDARYEAR_paidIncrementalIndexed=Monthly,Split:c,_,_,Filter:paid_inc
+ICollectingModeStrategy.MONTHLY_BY_CALENDARYEAR_paid=Monthly,Split:c,_,_,Filter:paid
 ICollectingModeStrategy.MONTHLY_NO-SPLIT_NO-FILTER=MonthLy,Split:_,_,_,Filter:All
 
 
