AR-111 NatCat Split initial commit

--- a/src/java/org/pillarone/riskanalytics/domain/pc/cf/output/CollectingModeStrategyResources.properties
+++ b/src/java/org/pillarone/riskanalytics/domain/pc/cf/output/CollectingModeStrategyResources.properties
@@ -87,6 +87,8 @@ ICollectingModeStrategy.MONTHLY_BY_UPDATEDATE_paid=Monthly,Split:u,_,_,Filter:pa
 ICollectingModeStrategy.MONTHLY_BY_CALENDARYEAR_paidIncrementalIndexed=Monthly,Split:c,_,_,Filter:paid_inc
 ICollectingModeStrategy.MONTHLY_BY_CALENDARYEAR_paid=Monthly,Split:c,_,_,Filter:paid
 ICollectingModeStrategy.MONTHLY_NO-SPLIT_NO-FILTER=Monthly,Split:_,_,_,Filter:All
+ICollectingModeStrategy.MONTHLY_BY_CAT_TYPE_paidIncrementalIndexed=Monthly,Split:cat,_,_,Filter:paid_inc
+#ICollectingModeStrategy.MONTHLY_BY_CAT_TYPE_BY_CALENDARYEAR_paidIncrementalIndexed=Monthly,Split:cat,c,_,Filter:paid_inc
 
 
 //END AR-111 BLOCK
